force-app/main/default/objects/Dummy15__c/Dummy15__c.object-meta.xml
<CustomObject>
    <label>Dummy15</label>
    <nameField>
        <label>Dummy15 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy15</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>