force-app/main/default/objects/Dummy15__c/fields/FooBar012__c.field-meta.xml
<CustomField>
    <fullName>FooBar012__c</fullName>
    <label>FooBar012</label>
    <length>255</length>
    <type>Text</type>
</CustomField>