force-app/main/default/objects/Dummy15__c/fields/FooBar051__c.field-meta.xml
<CustomField>
    <fullName>FooBar051__c</fullName>
    <label>FooBar051</label>
    <length>255</length>
    <type>Text</type>
</CustomField>