force-app/main/default/objects/Dummy15__c/fields/FooBar091__c.field-meta.xml
<CustomField>
    <fullName>FooBar091__c</fullName>
    <label>FooBar091</label>
    <length>255</length>
    <type>Text</type>
</CustomField>